tests/lit/all/assembler/mod/missing_module_name.yail
// RUN: @yair_as @file -o "@first_tempfile" --color never

// CHECK: error: Unexpected end of file
mod
